# birkhoff-cplex-benchmarking

./: README.md  birk_notebook.ipynb  notebook.ipynb  pyproject.toml
src/: model.py
