[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "birkhoff_cplex_benchmarking"
version = "0.1.0"
description = "Benchmarking of the minimum Birkhoff decomposition problem using CPLEX"
readme = "README.md"
requires-python = "~=3.8"
authors = [
  {name = "Victor Valls", email = "victor.valls@ibm.com" },
]
dependencies = [
  "numpy",
  "ipykernel",
  "docplex",
  "pandas",
  "tqdm",
  "jupyter",
]

[project.optional-dependencies]
test = ["coverage"]